--- a/src/components/wrappers/main/MainWrapper.css
+++ b/src/components/wrappers/main/MainWrapper.css
@@ -3,3 +3,18 @@
   flex: 1;
   padding: 30px 0;
 }
+
+.page-main__button {
+  background-color: teal;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 22px;
+  transition: all 0.2s ease-in;
+}
+
+.page-main__button:hover {
+  transform: scale(1.1);
+  text-decoration: underline;
+}
