--- a/src/components/ui/header/Header.css
+++ b/src/components/ui/header/Header.css
@@ -36,6 +36,10 @@
   text-align: center;
 }
 
+.header-navigation_sublist-item:not(:last-child) {
+  border-bottom: none;
+}
+
 .header-navigation_sublist-item:hover {
   cursor: pointer;
   background: lightgray;
